--- a/app/globals.css
+++ b/app/globals.css
@@ -140,4 +140,14 @@ body {
       transform: translateX(0%);
     }
   }
+
+  .no-spinners {
+    -moz-appearance: textfield;
+  }
+
+  .no-spinners::-webkit-outer-spin-button,
+  .no-spinners::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
 }
