--- a/app/globals.css
+++ b/app/globals.css
@@ -68,7 +68,7 @@
   --animate-dash: dash-move 1s linear infinite;
 }
 
-body {
+#hypershelf-root {
   font-family: var(--font-sans);
 }
 
@@ -149,4 +149,38 @@ body {
 .no-spinners::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.slide-to-unlock {
+  background: linear-gradient(
+    to right,
+    #4d4d4d,
+    #4d4d4d 40%,
+    white 50%,
+    #4d4d4d 60%,
+    #4d4d4d
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  text-fill-color: transparent;
+  animation: slidetounlock 20s infinite linear;
+}
+
+@keyframes slidetounlock {
+  0% {
+    background-position: -720px 0;
+  }
+  100% {
+    background-position: 720px 0;
+  }
 }
