--- a/tooling/tailwind/markdownEditor.css
+++ b/tooling/tailwind/markdownEditor.css
@@ -23,7 +23,7 @@
 .cm-content,
 .cm-editor p {
   font-family:
-    "Inter",
+    "Geist",
     ui-sans-serif,
     -apple-system,
     "system-ui",
